# HelloCpp

./: .gitignore  CMakeLists.txt  README.md
appsrc/: CMakeLists.txt
devlog/: AboutCMake.md  AboutHelloCpp.md  README.md
src/: CMakeLists.txt
src/appsrc/: CMakeLists.txt
src/appsrc/HelloCpp/: CMakeLists.txt  HelloCpp.cpp
src/libsrc/Statistics/: CMakeLists.txt  DescriptiveStatistics.cpp
src/libsrc/Statistics/include/Statistics/: DescriptiveStatistics.hpp
